rename gopayd payd (#29)
* renaming of root package from gopayd to payd

* update base path

* updating swagger docs, renamed root package, added revive linter
