# transports/http/balance.go
@@ -30,7 +30,7 @@ func (b *balance) RegisterRoutes(g *echo.Group) {
 // @Accept json
 // @Produce json
 // @Success 200
-// @Router /balance [GET].
+// @Router /v1/balance [GET].
 func (b *balance) balance(e echo.Context) error {
 	resp, err := b.svc.Balance(e.Request().Context())
 	if err != nil {
